--- a/style.css
+++ b/style.css
@@ -45,6 +45,18 @@
 			clear: both;
 		}*/
 
+		.legend-row {
+			display: flex;
+			font-size: 0.9em;
+			font-family: sans-serif;
+			font-weight: bold;
+			background: #f1f1f1;
+		}
+		
+		.legend-column {
+				flex: 50%;				
+		}
+
 		/* Style the footer */
 		footer {
 			background-color: #777;
